# bplist_downloader

./: Cargo.toml  playlist.json
songs_unpacked/0755c6502c9d90d6542fd93aaf1310f27780faca/: song.egg
songs_unpacked/12b38fc4c3f5d50bf33bb98a33db0450b0803109/: song.egg
songs_unpacked/4e32166551f1187d6ab3a628c9e7fcd07ff7e186/: song.egg
songs_unpacked/6bfbaacb789c8f625d97ec546e7de91f7a77bb40/: song.egg
songs_unpacked/8730ecc99a0b3b5972f49836409c11808cb827b4/: song.egg
songs_unpacked/a10c1fb8f8651638b5e4058959425a5debeb7cec/: song.egg
songs_unpacked/cdbe1485c489d38aa4bdc0ff98c72c938287adfe/: song.egg
songs_unpacked/cf769e3174944d031fda6da10f8800403cf3c149/: song.egg
songs_unpacked/f1cbb5c07199fa6713129f69b162afc08b649fed/: song.egg
songs_unpacked/fb3235a22813a9d40ca402d13c1c97fe95f6edd8/: cinema-video.json  song.egg
src/: downloader.rs  main.rs
